<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="horizontal"
android:layout_width="match_parent"
android:layout_height="60dp"
android:layout_margin="30dp"
android:background="@color/white">

<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:id="@+id/imagen"
    android:src="@drawable/hotelembera"
    android:layout_gravity="center"
    android:layout_weight="0.5"/>

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tNombreh"
        android:text="@string/nombreh1"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tdireccionh"
        android:text="@string/direccionh1"
        android:textSize="15dp"
        android:textColor="@color/blue"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ttelefonoh"
        android:text="@string/telefonoh1"
        android:textSize="10dp"
        android:textColor="@color/blue"/>


</LinearLayout>

</LinearLayout>