<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="30dp"
    android:background="@color/white">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imagenb"
        android:src="@drawable/la100"
        android:layout_gravity="center"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tNombreb"
            android:text="@string/nombreb1"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tdireccionb"
            android:text="@string/direccionb1"
            android:textSize="15dp"
            android:textColor="@color/blue"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ttelefonob"
            android:text="@string/telefonob1"
            android:textSize="15dp"
            android:textColor="@color/blue"/>


    </LinearLayout>

</LinearLayout>